--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,6 @@
 {
+  "extends": "./tsconfig.paths.json",
   "compilerOptions": {
-    "baseUrl": "./src",
-    "paths": {
-      "@core-ui/*": ["core-ui/*"],
-      "@apis/*": ["apis/*"],
-      "@app/*": ["app/*"]
-    },
     "target": "es5",
     "lib": [
       "dom",
